api, register, login, logout
react - connection to api; register, login, logout pages; top bar update;
flask - api update, request codes

--- a/app/react/src/assets/styles/scss/components/_header.scss
+++ b/app/react/src/assets/styles/scss/components/_header.scss
@@ -3,13 +3,20 @@ header#header {
 
     .menu {
         li {
-            a {
+            a, button {
                 color: $white;
                 padding-top: 0;
                 padding-bottom: 0;
+                cursor: pointer;
+            }
+            button {
+                line-height: 1;
+                text-decoration: none;
+                display: block;
+                padding: 0rem 1rem;
             }
             &:last-child {
-                a {
+                a, button {
                     padding-right: 0;
                 }
             }
