--- a/app/react/src/assets/styles/scss/style.scss
+++ b/app/react/src/assets/styles/scss/style.scss
@@ -41,7 +41,7 @@ CSS file.
 @include foundation-menu;
 @include foundation-menu-icon;
 // @include foundation-drilldown-menu;
-// @include foundation-dropdown;
+@include foundation-dropdown;
 // @include foundation-dropdown-menu;
 // @include foundation-responsive-embed;
 @include foundation-label;
